WEB Progressive app

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/logo.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/7387ac594d.js" crossorigin="anonymous"></script>
-    <title>Eskuz Loratu</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Eskuz Loratu</title>
+		<meta name="description" content="My Awesome App description" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+		<link rel="icon" href="/favicon-32x32.ico" type="image/ico" sizes="32x32" />
+		<link rel="icon" href="/favicon-16x16.ico" type="image/ico" sizes="16x16" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
+		<meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
+
+		<script src="https://kit.fontawesome.com/7387ac594d.js" crossorigin="anonymous"></script>
+	</head>
+	<body>
+		<div id="app"></div>
+		<script type="module" src="/src/main.js"></script>
+	</body>
 </html>
